<resources>
    <string name="app_name">Corona Widget</string>
    <string name="confirmed">Confirmed</string>
    <string name="phase">Phase</string>
    <string name="analysis">Analysis</string>
    <string name="guideline">Guideline</string>
    <string name="connect_internet">Connect Internet</string>
    <string name="local">Local</string>
    <string name="total_confirmed">Total\nConfirmed</string>
    <string name="korea_corona_widget">Korea Corona Widget</string>
    <string name="n_phase">%s Phase</string>
    <string name="n_person">%s</string>
    <string name="plus_n_person">+%s</string>
    <string name="finish">Finish</string>
    <string name="text_color">Text Color</string>
    <string name="background_color">Background Color</string>
    <string name="ok">OK</string>
    <string name="dead">Dead</string>
    <string name="first_vaccine">First\nVaccine</string>
    <string name="second_vaccine">Second\nVaccine</string>
    <string name="local_corona_widget">Local Corona Widget</string>
</resources>