<LinearLayout style="@style/Theme.CoronaWidget.Widget.Background"
    android:id="@+id/layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        style="@style/Theme.CoronaWidget.Widget.Text.Title"
        android:id="@+id/local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local" />

    <TextView
        style="@style/Theme.CoronaWidget.Widget.Text.Main"
        android:id="@+id/phase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="3단계"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Theme.CoronaWidget.Widget.Text.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_confirmed" />

        <TextView
            style="@style/Theme.CoronaWidget.Widget.Text.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmed" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Theme.CoronaWidget.Widget.Text.Main"
            android:id="@+id/total_confirmed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="1000000"/>

        <TextView
            style="@style/Theme.CoronaWidget.Widget.Text.Main"
            android:id="@+id/confirmed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="+1000"/>
    </LinearLayout>
</LinearLayout>