<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.taetae98.coronawidget.viewmodel.LocalCoronaWidgetViewModel" />

        <variable
            name="onTextColor"
            type="OnClickListener" />

        <variable
            name="onBackgroundColor"
            type="OnClickListener" />

        <variable
            name="onFinish"
            type="OnClickListener" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:title="@string/local_corona_widget"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/color_card_view"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/local_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                        android:hint="@string/local"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2">
                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:inputType="none"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:clickable="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_color_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:onClick="@{onTextColor}"
                        android:padding="10dp"
                        android:text="@string/text_color"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/text_color_image_view"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:onClick="@{onTextColor}"
                        app:backgroundColor="@{viewModel.textColor}"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/background_color_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:onClick="@{onBackgroundColor}"
                        android:padding="10dp"
                        android:text="@string/background_color"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/background_color_image_view"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:onClick="@{onBackgroundColor}"
                        app:backgroundColor="@{viewModel.backgroundColor}"/>
                </GridLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@{viewModel.wallpaper}"
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/color_card_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:textColor="@{viewModel.textColor}"
                    app:backgroundColor="@{viewModel.backgroundColor}"
                    android:text="@string/text_color"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="30dp"
                    android:layout_margin="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/ic_round_check_24"
            android:contentDescription="@string/finish"
            android:onClick="@{onFinish}"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/layout"
            app:layout_anchorGravity="bottom|end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>